--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,11 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi (>=0.115.12,<0.116.0)",
+    "fandom-py (>=0.2.1,<0.3.0)",
+    "uvicorn (>=0.34.2,<0.35.0)",
+    "aioredis (>=2.0.1,<3.0.0)",
+    "redis (>=5.2.1,<6.0.0)",
 ]
 
 
